<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_margin_top"
        android:text="@string/registration"
        android:textSize="24sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_margin_top"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="56dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:layout_below="@id/registrationTextView" />

    <EditText
        android:id="@+id/userEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_margin_top"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginRight="@dimen/default_margin_side"
        android:minHeight="56dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:layout_below="@id/userNameEditText" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_margin_top"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginRight="@dimen/default_margin_side"
        android:minHeight="56dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@id/userEmailEditText" />

    <EditText
        android:id="@+id/passwordAgainEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_margin_top"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginRight="@dimen/default_margin_side"
        android:minHeight="56dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:ems="10"
        android:hint="@string/password_again"
        android:inputType="textPassword"
        android:layout_below="@id/passwordEditText" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginTop="@dimen/register_margin_top"
        android:layout_marginRight="@dimen/default_margin_side"
        android:minHeight="56dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:layout_below="@id/passwordAgainEditText" />

    <Spinner
        android:id="@+id/phoneSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginTop="12dp"
        android:layout_marginRight="@dimen/default_margin_side"
        android:minHeight="56dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_below="@id/phoneEditText" />

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_margin_top"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginRight="@dimen/default_margin_side"
        android:minHeight="56dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:hint="@string/address"
        android:inputType="textMultiLine|textPostalAddress"
        android:ems="10"
        android:maxLines="3"
        android:layout_below="@id/phoneSpinner" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp"
        android:layout_below="@id/addressEditText">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:minWidth="88dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginStart="16dp"
            android:onClick="register"
            android:text="@string/registration" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:minWidth="88dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginStart="16dp"
            android:onClick="cancel"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>
